--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                         <div class="card bg-primary text-center card-form">
                             <div class="card-body">
                                 <h3>Sign Up Today</h3>
-                                <p>Please Fill out this firm to register</p>
+                                <p>Please Fill out this form to register</p>
                                 <form>
                                     <div class="form-group">
                                         <input type="text" class="form-control form-control-lg" placeholder="Username">
@@ -101,7 +101,191 @@
     </div>
 </header>
 
+<!--explore Head-->
+<section id="explore-head-section">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="py-5">
+                    <h1 class="display-4">Explore</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum excepturi explicabo laboriosam laborum mollitia quisquam ratione temporibus, unde! Aliquid aperiam blanditiis commodi dolorum</p>
+                    <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--explore section-->
+<section id="explore-section" class="bg-light text-muted py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="img/explore-section1.jpg" alt="" class="img-fluid mb3 rounded-circle">
+            </div>
+            <div class="col-md-6">
+                <h3>Explore & Connect</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta distinctio dolor doloribus eligendi enim ex facere hic, impedit incidunt iste itaque molestias pariatur perferendis quaerat ratione saepe similique sunt veritatis.</p>
+                <div class="d-flex flex-row">
+                    <div class="p-4 align-self-start">
+                        <i class="fa fa-check"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at cum cupiditate
+                        dignissimos ducimus eius id libero
+                    </div>
+                </div>
+                <div class="d-flex flex-row">
+                    <div class="p-4 align-self-start">
+                        <i class="fa fa-check"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at cum cupiditate
+                        dignissimos ducimus eius id libero
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--create Head-->
+<section id="create-head-section" class="bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="py-5">
+                    <h1 class="display-4">Create</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum excepturi explicabo laboriosam laborum mollitia quisquam ratione temporibus, unde! Aliquid aperiam blanditiis commodi dolorum</p>
+                    <a href="#" class="btn btn-outline-light">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--create section-->
+<section id="create-section" class="py-5">
+    <div class="container">
+        <div class="row">
 
+            <div class="col-md-6">
+                <h3>Explore & Connect</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta distinctio dolor doloribus eligendi enim ex facere hic, impedit incidunt iste itaque molestias pariatur perferendis quaerat ratione saepe similique sunt veritatis.</p>
+                <div class="d-flex flex-row">
+                    <div class="p-4 align-self-start">
+                        <i class="fa fa-check"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at cum cupiditate
+                        dignissimos ducimus eius id libero
+                    </div>
+                </div>
+                <div class="d-flex flex-row">
+                    <div class="p-4 align-self-start">
+                        <i class="fa fa-check"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at cum cupiditate
+                        dignissimos ducimus eius id libero
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="img/create-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+            </div>
+        </div>
+    </div>
+</section>
+<!--share Head-->
+<section id="share-head-section" class="bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="py-5">
+                    <h1 class="display-4">Share</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum excepturi explicabo laboriosam laborum mollitia quisquam ratione temporibus, unde! Aliquid aperiam blanditiis commodi dolorum</p>
+                    <a href="#" class="btn btn-outline-light">Share what you create</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--share section-->
+<section id="share-section" class="py-5 bg-light text-muted">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="img/share-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+            </div>
+            <div class="col-md-6">
+                <h3>Create your passion</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta distinctio dolor doloribus eligendi enim ex facere hic, impedit incidunt iste itaque molestias pariatur perferendis quaerat ratione saepe similique sunt veritatis.</p>
+                <div class="d-flex flex-row">
+                    <div class="p-4 align-self-start">
+                        <i class="fa fa-check"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at cum cupiditate
+                        dignissimos ducimus eius id libero
+                    </div>
+                </div>
+                <div class="d-flex flex-row">
+                    <div class="p-4 align-self-start">
+                        <i class="fa fa-check"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at cum cupiditate
+                        dignissimos ducimus eius id libero
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--main Footer-->
+<footer id="main-footer" class="bg-dark">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="py-4">
+                    <h1 class="h3">LoopLAB</h1>
+                    <p>Copyright &copy; 2017</p>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!--Contact Modal-->
+<div class="modal fade text-dark" id="contactModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="contactModalTitle">Contact Us</h5>
+                <button class="close" data-dismiss="modal"><span>&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Message</label>
+                        <textarea class="form-control"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary btn-block">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
